# YouTube_Projects_CLI_Template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/juicy_tool_name/: cli.py  logger.py
src/keel/: logic.py
tools/: change_project_name.py
