[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keel"
version = "0.0.0"
description = "Keel investing simulator"
requires-python = ">=3.8"
dependencies = ["typer"]

[project.scripts]
keel = "keel.cli:app"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
