[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juicy_tool_name"
version = "0.0.0"
description = "juicy_tool_name does very cool stuff."
requires-python = ">=3.8"
dependencies = ["typer"]

[project.scripts]
juicy_tool_name = "juicy_tool_name.cli:app"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
